src/eam_core/dsl/MuParser.py
# Generated from Mu.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MuParser ( Parser ):

    grammarFileName = "Mu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'||'", "'&&'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'^'", "'!'", "';'", "'='", "'('", "')'", 
                     "'{'", "'}'", "'true'", "'false'", "'nil'", "'if'", 
                     "'else'", "'while'", "'log'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "OR", "AND", "EQ", "NEQ", 
                      "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "POW", "NOT", "SCOL", "ASSIGN", "OPAR", 
                      "CPAR", "OBRACE", "CBRACE", "TRUE", "FALSE", "NIL", 
                      "IF", "ELSE", "WHILE", "LOG", "ID", "INT", "FLOAT", 
                      "STRING", "COMMENT", "SPACE", "OTHER" ]

    RULE_parse = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_return_expr = 3
    RULE_assignment = 4
    RULE_if_stat = 5
    RULE_condition_block = 6
    RULE_stat_block = 7
    RULE_while_stat = 8
    RULE_log = 9
    RULE_expr = 10
    RULE_atom = 11

    ruleNames =  [ "parse", "block", "stat", "return_expr", "assignment", 
                   "if_stat", "condition_block", "stat_block", "while_stat", 
                   "log", "expr", "atom" ]

    EOF = Token.EOF
    T__0=1
    OR=2
    AND=3
    EQ=4
    NEQ=5
    GT=6
    LT=7
    GTEQ=8
    LTEQ=9
    PLUS=10
    MINUS=11
    MULT=12
    DIV=13
    MOD=14
    POW=15
    NOT=16
    SCOL=17
    ASSIGN=18
    OPAR=19
    CPAR=20
    OBRACE=21
    CBRACE=22
    TRUE=23
    FALSE=24
    NIL=25
    IF=26
    ELSE=27
    WHILE=28
    LOG=29
    ID=30
    INT=31
    FLOAT=32
    STRING=33
    COMMENT=34
    SPACE=35
    OTHER=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(MuParser.BlockContext,0)


        def EOF(self):
            return self.getToken(MuParser.EOF, 0)

        def getRuleIndex(self):
            return MuParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = MuParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.block()
            self.state = 25
            self.match(MuParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.StatContext)
            else:
                return self.getTypedRuleContext(MuParser.StatContext,i)


        def getRuleIndex(self):
            return MuParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MuParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MuParser.T__0) | (1 << MuParser.IF) | (1 << MuParser.WHILE) | (1 << MuParser.LOG) | (1 << MuParser.ID) | (1 << MuParser.OTHER))) != 0):
                self.state = 27
                self.stat()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._OTHER = None # Token

        def assignment(self):
            return self.getTypedRuleContext(MuParser.AssignmentContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(MuParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(MuParser.While_statContext,0)


        def log(self):
            return self.getTypedRuleContext(MuParser.LogContext,0)


        def return_expr(self):
            return self.getTypedRuleContext(MuParser.Return_exprContext,0)


        def OTHER(self):
            return self.getToken(MuParser.OTHER, 0)

        def getRuleIndex(self):
            return MuParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MuParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MuParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.assignment()
                pass
            elif token in [MuParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.if_stat()
                pass
            elif token in [MuParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.while_stat()
                pass
            elif token in [MuParser.LOG]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.log()
                pass
            elif token in [MuParser.T__0]:
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.return_expr()
                pass
            elif token in [MuParser.OTHER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 38
                localctx._OTHER = self.match(MuParser.OTHER)
                print("unknown char: " + (None if localctx._OTHER is None else localctx._OTHER.text));
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_return_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_expr" ):
                listener.enterReturn_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_expr" ):
                listener.exitReturn_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_expr" ):
                return visitor.visitReturn_expr(self)
            else:
                return visitor.visitChildren(self)




    def return_expr(self):

        localctx = MuParser.Return_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_return_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(MuParser.T__0)
            self.state = 43
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MuParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MuParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def SCOL(self):
            return self.getToken(MuParser.SCOL, 0)

        def getRuleIndex(self):
            return MuParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MuParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(MuParser.ID)
            self.state = 46
            self.match(MuParser.ASSIGN)
            self.state = 47
            self.expr(0)
            self.state = 48
            self.match(MuParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(MuParser.IF)
            else:
                return self.getToken(MuParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(MuParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(MuParser.ELSE)
            else:
                return self.getToken(MuParser.ELSE, i)

        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = MuParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(MuParser.IF)
            self.state = 51
            self.condition_block()
            self.state = 57
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 52
                    self.match(MuParser.ELSE)
                    self.state = 53
                    self.match(MuParser.IF)
                    self.state = 54
                    self.condition_block() 
                self.state = 59
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 60
                self.match(MuParser.ELSE)
                self.state = 61
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_condition_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_block" ):
                listener.enterCondition_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_block" ):
                listener.exitCondition_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = MuParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.expr(0)
            self.state = 65
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(MuParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(MuParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(MuParser.CBRACE, 0)

        def stat(self):
            return self.getTypedRuleContext(MuParser.StatContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_stat_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_block" ):
                listener.enterStat_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_block" ):
                listener.exitStat_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = MuParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stat_block)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MuParser.OBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(MuParser.OBRACE)
                self.state = 68
                self.block()
                self.state = 69
                self.match(MuParser.CBRACE)
                pass
            elif token in [MuParser.T__0, MuParser.IF, MuParser.WHILE, MuParser.LOG, MuParser.ID, MuParser.OTHER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MuParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(MuParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return MuParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = MuParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MuParser.WHILE)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOG(self):
            return self.getToken(MuParser.LOG, 0)

        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def SCOL(self):
            return self.getToken(MuParser.SCOL, 0)

        def getRuleIndex(self):
            return MuParser.RULE_log

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog" ):
                listener.enterLog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog" ):
                listener.exitLog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog" ):
                return visitor.visitLog(self)
            else:
                return visitor.visitChildren(self)




    def log(self):

        localctx = MuParser.LogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_log)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MuParser.LOG)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.match(MuParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MuParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(MuParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(MuParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(MuParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinusExpr" ):
                listener.enterUnaryMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinusExpr" ):
                listener.exitUnaryMinusExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicationExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def MULT(self):
            return self.getToken(MuParser.MULT, 0)
        def DIV(self):
            return self.getToken(MuParser.DIV, 0)
        def MOD(self):
            return self.getToken(MuParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicationExpr" ):
                listener.enterMultiplicationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicationExpr" ):
                listener.exitMultiplicationExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicationExpr" ):
                return visitor.visitMultiplicationExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(MuParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomExpr" ):
                listener.enterAtomExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomExpr" ):
                listener.exitAtomExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def OR(self):
            return self.getToken(MuParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(MuParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(MuParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpr" ):
                listener.enterAdditiveExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpr" ):
                listener.exitAdditiveExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpr" ):
                return visitor.visitAdditiveExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def POW(self):
            return self.getToken(MuParser.POW, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpr" ):
                listener.enterPowExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpr" ):
                listener.exitPowExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpr" ):
                return visitor.visitPowExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def LTEQ(self):
            return self.getToken(MuParser.LTEQ, 0)
        def GTEQ(self):
            return self.getToken(MuParser.GTEQ, 0)
        def LT(self):
            return self.getToken(MuParser.LT, 0)
        def GT(self):
            return self.getToken(MuParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def EQ(self):
            return self.getToken(MuParser.EQ, 0)
        def NEQ(self):
            return self.getToken(MuParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpr" ):
                listener.enterEqualityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpr" ):
                listener.exitEqualityExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpr" ):
                return visitor.visitEqualityExpr(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MuParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MuParser.ExprContext)
            else:
                return self.getTypedRuleContext(MuParser.ExprContext,i)

        def AND(self):
            return self.getToken(MuParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MuParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MuParser.MINUS]:
                localctx = MuParser.UnaryMinusExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 83
                self.match(MuParser.MINUS)
                self.state = 84
                self.expr(9)
                pass
            elif token in [MuParser.NOT]:
                localctx = MuParser.NotExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 85
                self.match(MuParser.NOT)
                self.state = 86
                self.expr(8)
                pass
            elif token in [MuParser.OPAR, MuParser.TRUE, MuParser.FALSE, MuParser.NIL, MuParser.ID, MuParser.INT, MuParser.FLOAT, MuParser.STRING]:
                localctx = MuParser.AtomExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.atom()
                pass
            else:
                raise NoViableAltException(self)
